<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="?attr/backgroundColor"
    android:backgroundTint="?attr/backgroundColor">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:padding="8dp"
        android:background="?attr/card_background">

        <TextView
            android:id="@+id/tv_id"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:gravity="center_vertical"
            android:textColor="?attr/Text_Color"
            android:text="@string/_100"
            android:textSize="20sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_transaction_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="100dp"
            android:layout_toStartOf="@+id/tv_price"
            android:layout_toEndOf="@+id/tv_id"
            android:text="@string/cumparaturi"
            android:textColor="?attr/Text_Color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/btn_edit"
            android:gravity="center_vertical"
            android:text="@string/_1000"
            android:textColor="?attr/Text_Color"
            android:textSize="18sp"
            android:textStyle="italic" />

        <ImageButton
            android:id="@+id/btn_edit"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="3dp"
            android:layout_toStartOf="@+id/btn_delete"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/todo"
            android:background="?attr/card_background"
            android:backgroundTintMode="?attr/card_background"
            android:src="@drawable/ic_edit" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/todo"
            android:background="?attr/card_background"
            android:backgroundTintMode="?attr/card_background"
            android:src="@drawable/ic_delete" />

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_transaction_name"
            android:layout_alignStart="@+id/tv_transaction_name"
            android:layout_marginStart="1dp"
            android:layout_marginTop="0dp"
            android:text="@string/textview"
            android:textColor="?attr/Text_Color"
            android:textSize="12sp" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>